# fumi-python-libraries

./: .gitignore  README.md  pyproject.toml
doxygen/: Doxyfile
doxygen/fumi-python-lib/html/: ____init_____8py_source.html  ____main_____8py_source.html  algebra_2____init_____8py_source.html  annotated.html  annotated_dup.js  basic__algebraic__calculation__class_8py_source.html  classes.html  classfumi__python__libraries_1_1algebra_1_1basic__algebraic__calculation__class_1_1_basic_algebraic_calculation_class-members.html  classfumi__python__libraries_1_1algebra_1_1basic__algebraic__calculation__class_1_1_basic_algebraic_calculation_class.html  classfumi__python__libraries_1_1algebra_1_1basic__algebraic__calculation__class_1_1_basic_algebraic_calculation_class.js  classfumi__python__libraries_1_1algebra_1_1error__propagation__class_1_1_error_propagation_class-members.html  classfumi__python__libraries_1_1algebra_1_1error__propagation__class_1_1_error_propagation_class.js  (+17 more)
google-colab-src/: AlgebraCalculationNote.html  AlgebraCalculationNote.ipynb  ColabROOT.html  ColabROOT.ipynb  DrawNuclearChart.html  DrawNuclearChart.ipynb  ErrorPropagationNote.html  ErrorPropagationNote.ipynb  README.md
notebook/: calculate_algebra.html  calculate_algebra.ipynb  calculate_error_propagation.html  calculate_error_propagation.ipynb  draw-nuclear-chart.html  draw-nuclear-chart.ipynb
notebook/input/: isgmr.csv  magic_number_ktuy05.csv  stable_nuclei.csv
notebook/output/: ame2020.csv  ame2020_wb.csv  ktuy05.csv  ktuy05_exist.csv
src/fumi_python_libraries/: __init__.py  __main__.py
(+30 files in other folders)
