[project]
name = "fumi-python-libraries"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "sympy>=1.12",
    "matplotlib>=3.9.0",
    "jupyter>=1.0.0",
    "jupyterlab-language-pack-ja-jp>=4.2.post0",
    "python-lsp-server>=1.11.0",
    "python-lsp-ruff>=2.2.1",
    "jupyterlab-lsp>=5.1.0",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"fumi-python-libraries" = "fumi_python_libraries:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fumi_python_libraries"]
